--- a/style.css
+++ b/style.css
@@ -171,6 +171,66 @@ border: 1px solid grey;
     padding: 10px;
 }
 
+
+.Featured-container{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.Fcard{
+    text-align: center;
+    padding: 7px;
+    /* height: 100px;  */
+   border: 1px solid grey;
+   border: 200px;
+   border: 1px solid #333;
+}
+
+.Fcard img {
+    width: 300px;
+    object-fit: contain;   
+}
+
+.cardText{
+    display: flex;
+    justify-content: space-between;
+}
+
+.cardText p span{
+    font-size: 12px;
+}
+button{
+    cursor: pointer;
+}
+
+#paragraph1{
+color: #333;
+}
+
+#paragraph2{
+    color: #333;
+}
+
+.Shift-head{
+    text-align: center;
+}
+
+footer{
+    background-color: #333;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.links ul a {
+    text-align: center;
+    color: #fff;
+    padding: 10px;
+    text-decoration: none;
+}
+
 @media (max-width: 768px) {
    .nav-button{
     display: block;
@@ -210,7 +270,18 @@ width: 100vw;
     width: 100%;
 }
 
+/* Continuation */
+.Featured-container{
+    flex-direction: column;
 }
+
+.Shift-head{
+    text-align: left;
+}
+    
+}
+
+
 
 @media (max-width: 1837px) {
     .Text{
